# reg-intel-agent

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  init-db.sql  pyproject.toml  railway.toml  teardown.sh
.claude/: settings.json
.github/workflows/: ci.yml
data/: seed_documents.json
docs/: demo-script.md
docs/adrs/: ADR-001-langgraph-vs-bedrock-agents.md  ADR-001.md  ADR-002-pgvector-collocated-vs-dedicated-vector-db.md  ADR-003-application-guardrails-vs-bedrock-guardrails.md  ADR-004-railway-hobby-vs-aws-app-runner.md  ADR-004.md  ADR-005-openrouter-demo-vs-bedrock-production.md
docs/seed-data/: cloudkraft-ai-governance.txt
evaluation/: .env.example  CC_HANDOVER.md  README.md  requirements.txt  run_assurance.py
evaluation/data/: golden_dataset.json
evaluation/docs/adr/: ADR-006-ai-assurance-framework.md
evaluation/mappings/: control_mappings.yaml
evaluation/samples/: model_risk_assessment_sample.md
evaluation/src/: agent_client.py  metrics.py  report.py
scripts/: eval.py  test_free_model.py
src/: __init__.py  cli.py  config.py  db.py  graph.py  guardrails.py  ingest.py  main.py  state.py
src/agents/: __init__.py  action_agent.py  analysis_agent.py  knowledge_agent.py  supervisor.py
src/static/: index.html
src/tools/: github_tool.py  jira_tool.py
terraform/: budget_alert.tf  iam_bedrock.tf
tests/: test_action_agent.py  test_guardrails.py  test_health.py  test_retrieval.py
